--- a/web/admin/css/login.css
+++ b/web/admin/css/login.css
@@ -2,8 +2,9 @@
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css);
 
 body{
-	margin:35%;
-	width:100%;
+	margin-left:auto;
+	margin-right:auto;
+	width:70%;
 	height:100%;
 	background-color:#26282B;
 	font-family:'Nanum Gothic', serif;
@@ -11,6 +12,9 @@ body{
 	overflow:hidden;
 }
 
-#form{
-	
+#logo{
+}
+
+#form #submit{
+	color:white;
 }
