141205 frontend_admin_lee
changed a little bit

--- a/web/admin/css/admin.css
+++ b/web/admin/css/admin.css
@@ -138,11 +138,7 @@ body{
 	text-align:right;
 }
 
-.tab_menu{
-	display:none;
-}
-
-.menu tab_menu .tab_menu_table{
+.tab_menu_table{
 	width:1000px;
 }
 
