--- a/web/mobile/css/reserve.css
+++ b/web/mobile/css/reserve.css
@@ -105,6 +105,20 @@ body{
     width : 65%;
 }
 
+/* 전화번호나누기 kyk */
+.form .form_phone .contents {
+    text-align: center;
+    float : left;
+    width : 19%;
+}
+
+.form .form_phone .hypon {
+    text-align: center;
+    float : left;
+    width : 4%;
+}
+/* 여기까지 */
+
 .form input{
     height : 20px;
     width : 100%;
@@ -169,10 +183,6 @@ input[type="checkbox"]{
     height : 160px;
     margin-left : 3%;
     margin-top : 30px;
-}
-
-.dv_audio{
-    display : none;
 }
 
 /*footer 부분*/
